# tryingatom

./: .vimrc  README.md  book.fb2  change_terminal.sh  compile  config  example_tex.tex  i3status.conf  script_for_wallpaper
.github/workflows/: main.yml
fwd_structs/: CMakeLists.txt  main.cpp
fwd_structs/include/: A.h  A.h.h  B.h
